; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/i386/extr_gmon-sol2.c_moncontrol.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/i386/extr_gmon-sol2.c_moncontrol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sbuf = common dso_local global i64 0, align 8
@ssiz = common dso_local global i64 0, align 8
@s_lowpc = common dso_local global i64 0, align 8
@s_scale = common dso_local global i32 0, align 4
@profiling = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @moncontrol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @moncontrol(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load i64, i64* @sbuf, align 8
  %7 = add i64 %6, 4
  %8 = inttoptr i64 %7 to i16*
  %9 = load i64, i64* @ssiz, align 8
  %10 = sub i64 %9, 4
  %11 = load i64, i64* @s_lowpc, align 8
  %12 = load i32, i32* @s_scale, align 4
  %13 = call i32 @profil(i16* %8, i64 %10, i64 %11, i32 %12)
  store i32 0, i32* @profiling, align 4
  br label %16

14:                                               ; preds = %1
  %15 = call i32 @profil(i16* null, i64 0, i64 0, i32 0)
  store i32 3, i32* @profiling, align 4
  br label %16

16:                                               ; preds = %14, %5
  ret void
}

declare dso_local i32 @profil(i16*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
